--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,12 @@ repositories {
             url "https://maven.blamejared.com"
         }
     }
+    maven {
+        url = 'https://www.cursemaven.com'
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
@@ -156,6 +162,8 @@ dependencies {
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation fg.deobf("org.embeddedt:embeddium-${minecraft_version}:0.3.25-git-f6029e8+mc${minecraft_version}")
+    // runtimeOnly fg.deobf("curse.maven:moonlight-499980:5938277")
+    // runtimeOnly fg.deobf("curse.maven:supplementaries-412082:5928556")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
