--- a/build.gradle
+++ b/build.gradle
@@ -164,6 +164,10 @@ dependencies {
     implementation fg.deobf("org.embeddedt:embeddium-${minecraft_version}:0.3.25-git-f6029e8+mc${minecraft_version}")
     // runtimeOnly fg.deobf("curse.maven:moonlight-499980:5938277")
     // runtimeOnly fg.deobf("curse.maven:supplementaries-412082:5928556")
+    // runtimeOnly fg.deobf("curse.maven:ftbteams-404468:5267190")
+    // runtimeOnly fg.deobf("curse.maven:ftblib-404465:5925398")
+    // runtimeOnly fg.deobf("curse.maven:ftbquests-289412:5816794")
+    // runtimeOnly fg.deobf("curse.maven:architectury-419699:5137938")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
