--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,7 @@ mod_name=Flerovium
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=LGPL3.0
 # The mod version. See https://semver.org/
-mod_version=1.0.7
+mod_version=1.1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -52,3 +52,9 @@ mod_group_id=com.moepus
 mod_authors=
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.j-55
+flywheel_version = 0.6.11-13
+registrate_version = MC1.20-1.3.3
