--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -63,7 +63,13 @@ description='''${mod_description}'''
    side="CLIENT"
 [[dependencies.${mod_id}]]
    modId="embeddium"
-   mandatory=true
+   mandatory=false
    versionRange="[0.3.25,)"
    ordering="NONE"
    side="CLIENT"
+[[dependencies.${mod_id}]]
+modId="sodium"
+mandatory=false
+versionRange="[0.6.0,)"
+ordering="NONE"
+side="CLIENT"
