compact with EveryXHotpot

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,2 @@
 public net.minecraft.client.Minecraft clientTickCount # clientTickCount
-
+public com.mojang.blaze3d.systems.RenderSystem modelViewMatrix # modelViewMatrix
