Do not use extra new in item rendering

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,4 @@ public net.minecraft.client.particle.Particle f_107213_ # y
 public net.minecraft.client.particle.Particle f_107214_ # z
 public net.minecraft.client.particle.Particle f_107221_ # bbWidth
 public net.minecraft.client.particle.Particle f_107222_ # bbHeight
+public com.mojang.blaze3d.systems.RenderSystem modelViewMatrix # modelViewMatrix
