--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,13 @@
 public net.minecraft.client.Minecraft clientTickCount # clientTickCount
 public com.mojang.blaze3d.systems.RenderSystem modelViewMatrix # modelViewMatrix
+
+public net.minecraft.client.particle.Particle x
+public net.minecraft.client.particle.Particle y
+public net.minecraft.client.particle.Particle z
+public net.minecraft.client.particle.Particle bbWidth
+public net.minecraft.client.particle.Particle bbHeight
+
+public net.minecraft.client.renderer.culling.Frustum camX
+public net.minecraft.client.renderer.culling.Frustum camY
+public net.minecraft.client.renderer.culling.Frustum camZ
+public net.minecraft.client.renderer.culling.Frustum intersection
