--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,3 +11,5 @@ public net.minecraft.client.renderer.culling.Frustum camX
 public net.minecraft.client.renderer.culling.Frustum camY
 public net.minecraft.client.renderer.culling.Frustum camZ
 public net.minecraft.client.renderer.culling.Frustum intersection
+
+public com.mojang.blaze3d.vertex.BufferBuilder format
